# MCU-s

./: esp8266_server.ino  receiver.ino  transmitter.ino
src/arduino_embedded/: CMakeLists.txt  main.c  new.bat
src/arduino_embedded/interrupts/: main.c
src/arduino_embedded/uart/: main.c
src/esp32/RTOS/: main.ino
src/esp32/low-level/: GPIO_control.ino  README
src/esp8266/: esp8266_server.ino
src/misc/: 24LC08B_driver.ino  relay_voltage_control.ino
src/uart_blink/: receiver.ino  transmitter.ino
